specs/fragments/arrays/let-array-last.test
// Test: let-array-last
function main() returns int
    let arr = [10, 20, 30]
    return try arr.get(2) otherwise 0
end 'main'
---
ExitCode: 30
---
func.func @main() -> i64 {
  ^entry:
    x86.prologue stack_size=168 saved_gprs=[RBX,R12,R13]
    x86.lea_rdata rax, @__arr_0EBAC6C65ACC0F05
    x86.mov rcx, 3
    x86.lea rdx, qword ptr [rbp-64]
    x86.lea r8, qword ptr [rdx]
    x86.mov qword ptr [r8], rax
    x86.lea r8, qword ptr [rdx+8]
    x86.mov qword ptr [r8], rcx
    x86.lea r8, qword ptr [rdx+16]
    x86.mov qword ptr [r8], rcx
    x86.mov r8, 1
    x86.lea rcx, qword ptr [rdx+24]
    x86.mov dword ptr [rcx], r8
    x86.mov r8, 0
    x86.lea rcx, qword ptr [rdx+28]
    x86.mov dword ptr [rcx], r8
    x86.mov rbx, 0
    x86.lea r8, qword ptr [rbp-104]
    x86.lea rcx, qword ptr [r8]
    x86.mov qword ptr [rcx], rbx
    x86.lea rcx, qword ptr [r8+8]
    x86.mov rax, 32
    x86.push rsi
    x86.push rdi
    x86.mov rdi, rcx
    x86.mov rsi, rdx
    x86.mov rcx, rax
    x86.cld
    x86.rep_movsb
    x86.pop rdi
    x86.pop rsi
    x86.lea r12, qword ptr [rbp-144]
    x86.mov rax, 40
    x86.push rsi
    x86.push rdi
    x86.mov rdi, r12
    x86.mov rsi, r8
    x86.mov rcx, rax
    x86.cld
    x86.rep_movsb
    x86.pop rdi
    x86.pop rsi
    x86.mov rax, 2
    x86.lea r13, qword ptr [rbp-160]
    x86.mov r10, r13
    x86.mov r11, r12
    x86.push rax
    x86.pop r8
    x86.mov rdx, r11
    x86.mov rcx, r10
    x86.call Array$int.get
    x86.lea rax, qword ptr [r13]
    x86.movzx r8, byte ptr [rax]
    x86.mov rax, r8
    x86.cmp rax, rbx
    x86.setne rax
    x86.movzx rax, rax
    x86.test rax, rax
    x86.jne try.error
    x86.jmp try.success
  ^try.success:
    x86.lea rax, qword ptr [r13+8]
    x86.mov r8, qword ptr [rax]
    x86.mov r13, r8
    x86.jmp try.merge
  ^try.error:
    x86.mov r13, 0
    x86.jmp try.merge
  ^try.merge(%70: i64):
    x86.lea r8, qword ptr [r12+8]
    x86.mov r10, r8
    x86.mov eax, dword ptr [r10+24]
    x86.test eax, 1
    x86.jz free_do_11
    x86.jmp free_done_11
    free_do_11:
    x86.mov rcx, qword ptr [r10]
    x86.call maxon_free
    free_done_11:
    x86.mov rax, r13
    x86.epilogue saved_gprs=[RBX,R12,R13]
    x86.ret
}

func.func @Array$int.get(%__error_union_ret: ptr<!maxon.error_union<i64, ArrayError>>, %self: memref<!maxon.struct<Array$int>>, %index: i64) {
  ^entry(%__error_union_ret: ptr<!maxon.error_union<i64, ArrayError>>, %self: memref<!maxon.struct<Array$int>>, %index: i64):
    x86.prologue stack_size=32
    x86.mov r10, rcx
    x86.mov r11, rdx
    x86.mov rax, r8
    x86.mov rcx, r10
    x86.mov rdx, r11
    x86.lea r8, qword ptr [rdx+8]
    x86.lea r9, qword ptr [r8+8]
    x86.mov r8, qword ptr [r9]
    x86.mov r9, 0
    x86.cmp rax, r9
    x86.setl r9
    x86.movzx r9, r9
    x86.test r9, r9
    x86.jne then
    x86.jmp merge
  ^then:
    x86.mov r9, 0
    x86.mov r10, 1
    x86.mov byte ptr [rcx], r10
    x86.mov r10, 8
    x86.lea r11, qword ptr [rcx+r10]
    x86.mov byte ptr [r11], r9
    x86.epilogue
    x86.ret
  ^merge:
    x86.cmp rax, r8
    x86.setge r8
    x86.movzx r8, r8
    x86.test r8, r8
    x86.jne then_1
    x86.jmp merge_1
  ^then_1:
    x86.mov r8, 0
    x86.mov r11, 1
    x86.mov byte ptr [rcx], r11
    x86.mov r11, 8
    x86.lea r9, qword ptr [rcx+r11]
    x86.mov byte ptr [r9], r8
    x86.epilogue
    x86.ret
  ^merge_1:
    x86.mov r9, 0
    x86.mov byte ptr [rcx], r9
    x86.lea r9, qword ptr [rdx+8]
    x86.lea rdx, qword ptr [r9]
    x86.mov r9, qword ptr [rdx]
    x86.mov rdx, 3
    x86.mov r8, rax
    x86.push rcx
    x86.shl r8, rdx
    x86.pop rcx
    x86.lea rdx, qword ptr [r9+r8]
    x86.mov r9, qword ptr [rdx]
    x86.mov rdx, 8
    x86.lea r8, qword ptr [rcx+rdx]
    x86.mov qword ptr [r8], r9
    x86.epilogue
    x86.ret
}
---
